--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.0"
+    "vuetify": "^1.0.0",
+    "axios":"0.16.2",
+    "vue-axios":"2.0.2",
+    "vue-scrollto":"2.7.10"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
