--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.0.0",
     "axios": "0.16.2",
+    "babel-polyfill": "^6.26.0",
+    "vue": "^2.5.2",
     "vue-axios": "2.0.2",
-    "vue-scrollto": "2.7.10"
+    "vue-router": "^3.0.1",
+    "vue-scrollto": "2.7.10",
+    "vuetify": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
